Parse::M3U::Extended 0.1, 2012-12-17

 * Initial release

-- Olof Johansson <olof@cpan.org>