@@ -1,3 +1,11 @@
+Parse::M3U::Extended 0.2, 2016-06-23
+
+ * Rewrite and remove dependency on Regexp::Grammars. Any API
+   changes resulting in this are bugs. (No, access to the raw
+   Regexp::Grammars regexp was not part of the API.)
+
+-- Olof Johansson <olof@cpan.org>
+
 Parse::M3U::Extended 0.1, 2012-12-17
 
  * Initial release
